[gd_scene load_steps=101 format=3 uid="uid://qdsqap23j4ie"]

[ext_resource type="Script" path="res://Entities/Player/PlayerSS/player_ss.gd" id="1_jaw55"]
[ext_resource type="Resource" uid="uid://dr18hr2uxbsl0" path="res://inventory/playerinventory.tres" id="2_poxt0"]
[ext_resource type="Texture2D" uid="uid://bfdcj5hawxhod" path="res://Entities/Player/DarkSamurai.png" id="2_qrcop"]
[ext_resource type="PackedScene" uid="uid://bhsc1c1ccq0q3" path="res://Entities/entity_hitbox.tscn" id="2_rlyqj"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/FSM.gd" id="3_15oje"]
[ext_resource type="PackedScene" uid="uid://cl7wej5k1tlc4" path="res://UI/Pause/pause_menu.tscn" id="3_ak4tc"]
[ext_resource type="PackedScene" uid="uid://bh8hgh0ot1xyj" path="res://Entities/Player/PlayerSS/Attacks/player_sword_area.tscn" id="3_d10ch"]
[ext_resource type="PackedScene" uid="uid://d31oquot12rly" path="res://UI/PlayerHUD/player_gui.tscn" id="3_fusxc"]
[ext_resource type="Script" path="res://Entities/player_hitbox.gd" id="4_0m58k"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/Attacks/player_sword_area.gd" id="4_4cvk8"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/IdleState.gd" id="4_k6y6q"]
[ext_resource type="PackedScene" uid="uid://7i1uvkstawwl" path="res://UI/Transition/transition_anim.tscn" id="4_rqoi5"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/DashState.gd" id="5_lobj3"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/RunState.gd" id="5_sn4mp"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/FallState.gd" id="6_d8ypo"]
[ext_resource type="PackedScene" uid="uid://cd0un7grrfdfn" path="res://UI/inventory_gui.tscn" id="6_satfl"]
[ext_resource type="PackedScene" uid="uid://dlvdht3xemejy" path="res://UI/PlayerHUD/dash_icon.tscn" id="7_5i0bf"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/JumpState.gd" id="7_bufn4"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/Attack1State.gd" id="8_kiy5g"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/DieState.gd" id="10_cg6rn"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/Attack2State.gd" id="10_g4e6d"]
[ext_resource type="AudioStream" uid="uid://bh62sqsd7fcr5" path="res://Sounds/SFX/LTTP_Sword1.wav" id="11_2xbu7"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/Attack3State.gd" id="11_nv6s7"]
[ext_resource type="PackedScene" uid="uid://biahfhodysuqd" path="res://Entities/Player/PlayerSS/Cast/cast.tscn" id="12_1eqcw"]
[ext_resource type="AudioStream" uid="uid://gd0k3peuklx4" path="res://Sounds/SFX/cartoon-jump-6462.mp3" id="12_htm7q"]
[ext_resource type="AudioStream" uid="uid://bxct3i7nwbt3f" path="res://Sounds/SFX/LTTP_Sword4.wav" id="12_hu1i7"]
[ext_resource type="Shader" path="res://Shaders/flash.gdshader" id="12_k6vu6"]
[ext_resource type="AudioStream" uid="uid://j61u0t0e0my6" path="res://Sounds/SFX/LTTP_Sword2.wav" id="13_667j2"]
[ext_resource type="AudioStream" uid="uid://bfb2f35p4rqj6" path="res://Sounds/SFX/LTTP_Sword_Spin.wav" id="14_waqik"]
[ext_resource type="AudioStream" uid="uid://cmb8xmkxjsms3" path="res://Sounds/SFX/LTTP_Link_Land.wav" id="15_l1kjy"]
[ext_resource type="AudioStream" uid="uid://dfu6wd0qadvbm" path="res://Sounds/SFX/LTTP_Link_Dying.wav" id="16_31vkk"]
[ext_resource type="AudioStream" uid="uid://cv7mwbvy6w133" path="res://Sounds/SFX/SE_BTL_DAMAGE1.wav" id="17_nk67b"]
[ext_resource type="AudioStream" uid="uid://cx5ymqqphjsvq" path="res://Sounds/SFX/SE_RECOVERY.wav" id="20_5hk3w"]
[ext_resource type="AudioStream" uid="uid://bxiibbbx506vi" path="res://Sounds/SFX/megaman_bullet.mp3" id="21_p3ali"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/CastState.gd" id="27_lnp8f"]
[ext_resource type="Script" path="res://Entities/Player/PlayerSS/States/ShootState.gd" id="31_lqf48"]
[ext_resource type="PackedScene" uid="uid://d21bqed47iosm" path="res://Entities/Player/PlayerSS/Projectile/baseProjectile.tscn" id="32_3mcbe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_epcnk"]
radius = 13.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nevb6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b2suj"]
shader = ExtResource("12_k6vu6")
shader_parameter/flash_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jmg1m"]
atlas = ExtResource("2_qrcop")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp0q5"]
atlas = ExtResource("2_qrcop")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0315"]
atlas = ExtResource("2_qrcop")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3sgq"]
atlas = ExtResource("2_qrcop")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4dma"]
atlas = ExtResource("2_qrcop")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jge5a"]
atlas = ExtResource("2_qrcop")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbmsk"]
atlas = ExtResource("2_qrcop")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1q1e"]
atlas = ExtResource("2_qrcop")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk6au"]
atlas = ExtResource("2_qrcop")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_copka"]
atlas = ExtResource("2_qrcop")
region = Rect2(1664, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0pyi"]
atlas = ExtResource("2_qrcop")
region = Rect2(3264, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4rbu"]
atlas = ExtResource("2_qrcop")
region = Rect2(3328, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8es4y"]
atlas = ExtResource("2_qrcop")
region = Rect2(3392, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7aly"]
atlas = ExtResource("2_qrcop")
region = Rect2(3456, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7xva"]
atlas = ExtResource("2_qrcop")
region = Rect2(3520, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg446"]
atlas = ExtResource("2_qrcop")
region = Rect2(3584, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v64fj"]
atlas = ExtResource("2_qrcop")
region = Rect2(3648, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cbr1"]
atlas = ExtResource("2_qrcop")
region = Rect2(2368, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvrjs"]
atlas = ExtResource("2_qrcop")
region = Rect2(2432, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtd66"]
atlas = ExtResource("2_qrcop")
region = Rect2(2496, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfv7j"]
atlas = ExtResource("2_qrcop")
region = Rect2(2560, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ei5n"]
atlas = ExtResource("2_qrcop")
region = Rect2(2624, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkete"]
atlas = ExtResource("2_qrcop")
region = Rect2(2688, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_medrc"]
atlas = ExtResource("2_qrcop")
region = Rect2(2752, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx5h4"]
atlas = ExtResource("2_qrcop")
region = Rect2(2816, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5et1o"]
atlas = ExtResource("2_qrcop")
region = Rect2(2880, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htvdp"]
atlas = ExtResource("2_qrcop")
region = Rect2(2944, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej073"]
atlas = ExtResource("2_qrcop")
region = Rect2(3008, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6byw4"]
atlas = ExtResource("2_qrcop")
region = Rect2(3072, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa5bj"]
atlas = ExtResource("2_qrcop")
region = Rect2(3136, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eabwo"]
atlas = ExtResource("2_qrcop")
region = Rect2(3200, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe5gi"]
atlas = ExtResource("2_qrcop")
region = Rect2(1984, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rild8"]
atlas = ExtResource("2_qrcop")
region = Rect2(2048, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv56w"]
atlas = ExtResource("2_qrcop")
region = Rect2(2112, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjdlm"]
atlas = ExtResource("2_qrcop")
region = Rect2(2176, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhvrj"]
atlas = ExtResource("2_qrcop")
region = Rect2(2240, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkwsv"]
atlas = ExtResource("2_qrcop")
region = Rect2(2304, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njwld"]
atlas = ExtResource("2_qrcop")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmw5x"]
atlas = ExtResource("2_qrcop")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lblxt"]
atlas = ExtResource("2_qrcop")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq80b"]
atlas = ExtResource("2_qrcop")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru68f"]
atlas = ExtResource("2_qrcop")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf6yv"]
atlas = ExtResource("2_qrcop")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp1b1"]
atlas = ExtResource("2_qrcop")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3b55"]
atlas = ExtResource("2_qrcop")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn2vp"]
atlas = ExtResource("2_qrcop")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv2ep"]
atlas = ExtResource("2_qrcop")
region = Rect2(1728, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_20mkx"]
atlas = ExtResource("2_qrcop")
region = Rect2(1792, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5o3k"]
atlas = ExtResource("2_qrcop")
region = Rect2(1856, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e454e"]
atlas = ExtResource("2_qrcop")
region = Rect2(1920, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k185t"]
atlas = ExtResource("2_qrcop")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qha18"]
atlas = ExtResource("2_qrcop")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bih60"]
atlas = ExtResource("2_qrcop")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt3b1"]
atlas = ExtResource("2_qrcop")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o6sl"]
atlas = ExtResource("2_qrcop")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5bi5"]
atlas = ExtResource("2_qrcop")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubih4"]
atlas = ExtResource("2_qrcop")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74xv1"]
atlas = ExtResource("2_qrcop")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c6t2i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmg1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp0q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0315")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3sgq")
}],
"loop": false,
"name": &"Attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4dma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jge5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbmsk")
}],
"loop": false,
"name": &"Attack2",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1q1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk6au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_copka")
}],
"loop": false,
"name": &"Attack3",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0pyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4rbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8es4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7aly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7xva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg446")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v64fj")
}],
"loop": false,
"name": &"Dash",
"speed": 26.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cbr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvrjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtd66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfv7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ei5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkete")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_medrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx5h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5et1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htvdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej073")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6byw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa5bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eabwo")
}],
"loop": false,
"name": &"Death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe5gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rild8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv56w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjdlm")
}],
"loop": true,
"name": &"Fall",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhvrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkwsv")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njwld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmw5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lblxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq80b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru68f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf6yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp1b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3b55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn2vp")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv2ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20mkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5o3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e454e")
}],
"loop": true,
"name": &"Jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k185t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qha18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bih60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt3b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o6sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5bi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubih4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74xv1")
}],
"loop": true,
"name": &"Run",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmg1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp0q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0315")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3sgq")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fiavj"]
size = Vector2(10.5, 29)

[node name="PlayerSS" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(2, 2)
collision_layer = 3
collision_mask = 3
floor_stop_on_slope = false
script = ExtResource("1_jaw55")
inventory = ExtResource("2_poxt0")
health = 30
movespeed = 325
attack = 10

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3
process_priority = 1

[node name="HealthBar" parent="HUD" instance=ExtResource("3_fusxc")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(2.7, 2.7)
pivot_offset = Vector2(5, -3)

[node name="PauseMenu" parent="HUD" instance=ExtResource("3_ak4tc")]

[node name="DeathTransition" parent="HUD" instance=ExtResource("4_rqoi5")]
z_index = 4
position = Vector2(-254, -443)
scale = Vector2(5.34039, 2.18085)

[node name="inventoryGui" parent="HUD" instance=ExtResource("6_satfl")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0001
offset_bottom = 0.0
grow_vertical = 0
scale = Vector2(1.5, 1.469)
pivot_offset = Vector2(-150, 105)

[node name="DashIcon" parent="HUD" instance=ExtResource("7_5i0bf")]
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(-12, 180)

[node name="PlayerHitbox" parent="." instance=ExtResource("2_rlyqj")]
scale = Vector2(0.5, 0.5)
collision_layer = 3
monitorable = true
script = ExtResource("4_0m58k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(6, -24)
shape = SubResource("CapsuleShape2D_epcnk")

[node name="PlayerSwordArea" parent="." instance=ExtResource("3_d10ch")]
position = Vector2(17.5, -10)
collision_mask = 5
script = ExtResource("4_4cvk8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSwordArea"]
shape = SubResource("CircleShape2D_nevb6")

[node name="Cast" parent="." instance=ExtResource("12_1eqcw")]
z_index = 6
position = Vector2(18.5, -15)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_b2suj")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_c6t2i")
animation = &"Idle"
flip_h = true

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_fiavj")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0

[node name="Sounds" type="Node" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_htm7q")
volume_db = -23.0
bus = &"SFX"

[node name="Sword1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_2xbu7")
volume_db = -17.0
bus = &"SFX"

[node name="Sword2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_hu1i7")
volume_db = -17.0
pitch_scale = 2.2
bus = &"SFX"

[node name="Sword3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13_667j2")
volume_db = -17.0
bus = &"SFX"

[node name="DashSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("14_waqik")
volume_db = -17.0
bus = &"SFX"

[node name="LandSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_l1kjy")
volume_db = -22.0
bus = &"SFX"

[node name="Death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("16_31vkk")
volume_db = -17.0
bus = &"SFX"

[node name="DamageSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("17_nk67b")
volume_db = -20.0
bus = &"SFX"

[node name="HealSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("20_5hk3w")
volume_db = -20.0
bus = &"SFX"

[node name="BulletSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("21_p3ali")
volume_db = -28.0
bus = &"SFX"

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("startState")]
script = ExtResource("3_15oje")
startState = NodePath("Idle")

[node name="Idle" type="Node" parent="FSM" node_paths=PackedStringArray("fallState", "jumpState", "moveState", "dashState", "attack1State", "attack2State", "attack3State", "dieState", "shootState", "castState")]
script = ExtResource("4_k6y6q")
fallState = NodePath("../Fall")
jumpState = NodePath("../Jump")
moveState = NodePath("../Run")
dashState = NodePath("../Dash")
attack1State = NodePath("../Attack1")
attack2State = NodePath("../Attack2")
attack3State = NodePath("../Attack3")
dieState = NodePath("../Die")
shootState = NodePath("../Shooting")
castState = NodePath("../Cast")
animationName = "Idle"

[node name="Cast" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "jumpState", "fallState", "dashState", "dieState", "moveState")]
script = ExtResource("27_lnp8f")
idleState = NodePath("../Idle")
jumpState = NodePath("../Jump")
fallState = NodePath("../Fall")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
moveState = NodePath("../Run")

[node name="Dash" type="Node" parent="FSM" node_paths=PackedStringArray("fallState", "idleState", "moveState", "dieState")]
script = ExtResource("5_lobj3")
fallState = NodePath("../Fall")
idleState = NodePath("../Idle")
moveState = NodePath("../Run")
dieState = NodePath("../Die")
animationName = "Dash"

[node name="Run" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "jumpState", "fallState", "dashState", "dieState", "attack1State", "attack2State", "attack3State", "shootState", "castState")]
script = ExtResource("5_sn4mp")
idleState = NodePath("../Idle")
jumpState = NodePath("../Jump")
fallState = NodePath("../Fall")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
attack1State = NodePath("../Attack1")
attack2State = NodePath("../Attack2")
attack3State = NodePath("../Attack3")
shootState = NodePath("../Shooting")
castState = NodePath("../Cast")
animationName = "Run"

[node name="Fall" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "jumpState", "dashState", "dieState", "attack1State", "attack2State", "attack3State", "shootState", "castState")]
script = ExtResource("6_d8ypo")
idleState = NodePath("../Idle")
jumpState = NodePath("../Jump")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
attack1State = NodePath("../Attack1")
attack2State = NodePath("../Attack2")
attack3State = NodePath("../Attack3")
shootState = NodePath("../Shooting")
castState = NodePath("../Cast")
animationName = "Fall"

[node name="Jump" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "fallState", "dashState", "dieState", "attack1State", "attack2State", "attack3State", "shootState", "castState")]
script = ExtResource("7_bufn4")
idleState = NodePath("../Idle")
fallState = NodePath("../Fall")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
attack1State = NodePath("../Attack1")
attack2State = NodePath("../Attack2")
attack3State = NodePath("../Attack3")
shootState = NodePath("../Shooting")
castState = NodePath("../Cast")
animationName = "Jump"

[node name="Attack1" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "jumpState", "fallState", "dashState", "dieState", "attack2State", "shootState", "castState")]
script = ExtResource("8_kiy5g")
idleState = NodePath("../Idle")
jumpState = NodePath("../Jump")
fallState = NodePath("../Fall")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
attack2State = NodePath("../Attack2")
shootState = NodePath("../Shooting")
castState = NodePath("../Cast")
animationName = "Attack1"

[node name="Attack2" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "jumpState", "fallState", "dashState", "dieState", "attack3State")]
script = ExtResource("10_g4e6d")
idleState = NodePath("../Idle")
jumpState = NodePath("../Jump")
fallState = NodePath("../Fall")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
attack3State = NodePath("../Attack1")
animationName = "Attack2"

[node name="Attack3" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "jumpState", "fallState", "dashState", "dieState")]
script = ExtResource("11_nv6s7")
idleState = NodePath("../Idle")
jumpState = NodePath("../Jump")
fallState = NodePath("../Fall")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
animationName = "Attack3"

[node name="Die" type="Node" parent="FSM"]
script = ExtResource("10_cg6rn")
animationName = "Death"

[node name="Shooting" type="Node" parent="FSM" node_paths=PackedStringArray("idleState", "jumpState", "fallState", "dashState", "dieState", "moveState")]
script = ExtResource("31_lqf48")
idleState = NodePath("../Idle")
jumpState = NodePath("../Jump")
fallState = NodePath("../Fall")
dashState = NodePath("../Dash")
dieState = NodePath("../Die")
moveState = NodePath("../Run")
projectile = ExtResource("32_3mcbe")
animationName = "Shoot"

[node name="States to be implemented later" type="Node" parent="."]

[node name="Hurt" type="Node" parent="States to be implemented later"]

[node name="Item" type="Node" parent="States to be implemented later"]

[node name="Cast" type="Node" parent="States to be implemented later"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ProjectileSpawn" type="Node2D" parent="."]
position = Vector2(0.5, -13.5)

[connection signal="area_entered" from="PlayerHitbox" to="PlayerHitbox" method="_on_area_entered"]
[connection signal="healthChanged" from="PlayerHitbox" to="PlayerHitbox" method="_on_health_changed"]
[connection signal="area_entered" from="PlayerSwordArea" to="PlayerSwordArea" method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="FSM/Attack1" method="FinishedAttack"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="FSM/Attack2" method="FinishedAttack"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="FSM/Attack3" method="FinishedAttack"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
